test/corpus/literals.txt
==============================
integer number literals
==============================

0b01
0o01234567
0123456789
123_456_789
0x0123456789_abcdef_ABCDEF

---

(source_file
  (integer_literal)
  (integer_literal)
  (integer_literal)
  (integer_literal)
  (integer_literal))


==============================
float number literals
==============================

0123456789.
.0123456789
0123456789.0123456789
9e10
9E-1
9f10
9f-1

0x0123456789_abcdef.ABCDEFp0
0x0123456789_abcdef_ABCDEF.p-1
0x.0123456789_abcdef_ABCDEFp1

----

(source_file
  (float_literal)
  (float_literal)
  (float_literal)
  (float_literal)
  (float_literal)
  (float_literal)
  (float_literal)
  (float_literal)
  (float_literal)
  (float_literal))


==============================
character literals
==============================

' '
'o'
'\t'
'\uffff'
'\U10ffff'

---

(source_file
  (character_literal)
  (character_literal)
  (character_literal (escape_sequence))
  (character_literal (escape_sequence))
  (character_literal (escape_sequence)))


=================
Strings
=================

"foo"
"""a "quoted" string"""
"fo\"o"

---

(source_file
  (string)
  (triple_string)
  (string))

=================
Command strings
=================

`foo`
`foo \` bar`

---

(source_file
  (command_string)
  (command_string))

=================
Prefixed strings
=================

x = r"foo"
y = v"1.0"

---

(source_file
  (assignment_expression (identifier) (string (identifier)))
  (assignment_expression (identifier) (string (identifier))))
